--- a/HWJFX/src/sample/sample.fxml
+++ b/HWJFX/src/sample/sample.fxml
@@ -1,36 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="359.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <AnchorPane layoutX="20.0" layoutY="10.0" prefHeight="458.0" prefWidth="344.0">
-         <children>
-            <Label fx:id="randomNum" alignment="CENTER" layoutX="61.0" layoutY="86.0" prefHeight="67.0" prefWidth="237.0" text="0" textFill="#1f04b9">
-               <font>
-                  <Font name="System Bold" size="48.0" />
-               </font>
-            </Label>
-            <Label layoutX="76.0" layoutY="153.0" prefHeight="75.0" prefWidth="182.0" text="Введите число">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <TextField fx:id="numberInput" layoutX="84.0" layoutY="243.0" prefHeight="27.0" prefWidth="165.0">
-               <padding>
-                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-               </padding>
-            </TextField>
-            <Button layoutX="141.0" layoutY="305.0" mnemonicParsing="false" onAction="#doRandomAction" text="Button" />
-         </children>
-      </AnchorPane>
+      <Label fx:id="message" alignment="CENTER" layoutX="100.0" layoutY="28.0" prefHeight="95.0" prefWidth="158.0" text="Я Загадал число от 1 до 9 попробуй угадать" textAlignment="CENTER" wrapText="true" />
+      <TextField fx:id="checkNumber" layoutX="105.0" layoutY="139.0" onAction="#checkAnswer" />
+      <Button fx:id="button" layoutX="142.0" layoutY="188.0" mnemonicParsing="false" onAction="#checkAnswer" text="Проверить" />
+      <Button fx:id="restartButton" layoutX="129.0" layoutY="111.0" mnemonicParsing="false" onAction="#restartGame" text="перезапустить?" />
+      <Button fx:id="exit" layoutX="155.0" layoutY="164.0" mnemonicParsing="false" onAction="#exit" text="Выход" />
    </children>
-</GridPane>
+</AnchorPane>
